Отделение вложенных тегов пробелами (правильное?)

--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>
-Заголовок Gauda 😍
-</title>
- <style type="text/css">
-   h5 { 
-    font-size: 160%; 
-    font-family: cursive; 
-    color: #B22222;
-   }
-  </style>
-</head>
-
-<body>
-<h5> А это абзац Gauda 🍕
-</h5>
-</body>
+  <head>
+  <meta charset="UTF-8">
+  <title>Заголовок Gauda 😍</title>
+	<style type="text/css">
+	h5 { 
+	font-size: 160%; 
+	font-family: cursive; 
+	color: #B22222;
+	}
+	</style>
+  </head>
+	<body>
+	<h5>А это абзац Gauda 🍕</h5>
+	</body>
 </html>
